--- a/EFI/OC/Config.plist
+++ b/EFI/OC/Config.plist
@@ -1328,7 +1328,7 @@
 				<key>SystemAudioVolume</key>
 				<data>Rg==</data>
 				<key>boot-args</key>
-				<string>keepsyms=1 debug=0x100 npci=0x2000</string>
+				<string>keepsyms=1 debug=0x100</string>
 				<key>csr-active-config</key>
 				<data>AAAAAA==</data>
 				<key>prev-lang:kbd</key>
@@ -1399,13 +1399,13 @@
 			<key>AdviseFeatures</key>
 			<false/>
 			<key>MLB</key>
-			<string>C17709270CDHMHKFB</string>
+			<string>PROVIDEYOUROWN</string>
 			<key>MaxBIOSVersion</key>
 			<false/>
 			<key>ProcessorType</key>
 			<integer>0</integer>
 			<key>ROM</key>
-			<data>oIz9qk75</data>
+			<data>////////</data>
 			<key>SpoofVendor</key>
 			<true/>
 			<key>SystemMemoryStatus</key>
@@ -1413,9 +1413,9 @@
 			<key>SystemProductName</key>
 			<string>MacBookPro13,1</string>
 			<key>SystemSerialNumber</key>
-			<string>C17TCJYKGVC1</string>
+			<string>CHANGEME</string>
 			<key>SystemUUID</key>
-			<string>32A92453-4A80-4D03-A756-521987B26162</string>
+			<string>USEGENSMBIOS</string>
 		</dict>
 		<key>UpdateDataHub</key>
 		<true/>
